:bugs: fix layout bugs

--- a/themes/serp-cars/scss/pages/_cars.scss
+++ b/themes/serp-cars/scss/pages/_cars.scss
@@ -2,6 +2,8 @@
   padding-bottom: 8rem;
 
   .car {
+    min-height: auto;
+    height: auto;
     img {
       object-fit: cover;
       object-position: center;
